# fastapi

./: .gitignore  README.md  README_STUDY.md  ROADMAP.md  Sprint_Process.ipynb  config.example.json  debug_service.py  main.py  models.py  presentation_material.md  pyproject.toml  reproduce_general_error.py  reproduce_issue.py  reproduce_json_error.py  schemas.py  service.py  study1_backup.md  verify_data_stability.py  verify_prompt.py  verify_ultra_quality.py
app/: main.py
app/database/: database.py
app/models/: models.py
app/routers/: prompt.py
app/services/: service.py
docs/: 00_용어집.md  01_왜_Linux인가.md  02_데이터베이스_선택_가이드.md  03_FastAPI_기초.md  04_소프트웨어_설계.md  05_클린_아키텍처.md  06_테스트_완벽_가이드.md  07_CI_CD_파이프라인.md  08_Git_협업_마스터.md  09_라이선스_이해.md  10_FastAPI_완벽_마스터.md
legacy_backup/controller/: __init__.py  data_controller.py  errors.py  schemas.py
legacy_backup/templates/: index.html  success.html
legacy_backup/templates/static/: script.js  style.css
templates/: index.html  my_info.html
