[tool.poetry]
name = "fastapi_practice"
version = "1"
description = "start"
authors = ["hyeoksulee <dlgurtn112@khu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.2"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
sqlalchemy = "^2.0.44"
aiomysql = "^0.3.2"
pymysql = "^1.1.2"
requests = "^2.32.5"
openai = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
